@@ -10,6 +10,8 @@ Rules-Requires-Root: no
 Build-Depends:
 # Needed for buildtools.mk fragment.
  dpkg-dev (>= 1.19.0),
+# Needed for dh_makeshlibs udeb support.
+ debhelper (>= 12.3),
  debhelper-compat (= 12),
 
 Package: libaio1
